facet-path/tests/snapshots/pretty_formatting__pretty_nested_struct.snap
---
source: facet-path/tests/pretty_formatting.rs
expression: formatted
---
  × type not supported
   ╭─[Inner:2:1]
 1 │ #[derive(Facet)]
 2 │ struct Inner {
   · ▲
 3 │     value: i32,
   ·            ─┬─
   ·             ╰── error here
 4 │ }
   ╰────

Error: 
  × in type
   ╭─[Outer:2:1]
 1 │ #[derive(Facet)]
 2 │ struct Outer {
   · ▲
 3 │     label: String,
 4 │     inner: Inner,
   ·            ──┬──
   ·              ╰── via this field
 5 │ }
   ╰────
